# codex_agents

./: .gitignore  AGENTS.md  config.template.toml  config.toml  docker-compose.yml  installation_id
agents/: debugger.toml  designer.toml  dev-be.toml  dev-fe.toml  devops.toml  librarian.toml  pm.toml  researcher.toml  reviewer.toml  sa.toml  user-tester.toml  whitehat.toml
codex-home/: AGENTS.md  config.template.toml  system_prefix.md
codex-home/agents/: backend-explorer.toml  critical-planner.toml  debugger.toml  designer.toml  dev-be.toml  dev-fe.toml  devops.toml  doc-sync-worker.toml  evolution-agent.toml  frontend-explorer.toml  hallucination-auditor.toml  librarian.toml  meta-evolution.toml  minimalist-coder.toml  pm.toml  research-explorer.toml  researcher.toml  reviewer.toml  sa.toml  simplifier-reviewer.toml  user-tester.toml  whitehat.toml
codex-home/contracts/: agent_handoff.yaml  oracle_review.yaml  pm_task_contract.yaml  request_enrichment.yaml  scope_drift_report.yaml
codex-home/coordination/: README.md  break_resume_protocol.md
codex-home/guardrails/: anti-context-overflow.md  anti-hallucination.md  anti-loop.md  claim-verification.md  confidence-theater.md  context-budget.md  dependency-deadlock.md  file-ownership.md  monotonic-progress.md  priority-scheduling.md  source-trust.md  swarm-budget.md  veto-protocol.md
codex-home/rules/: context.md  (+11 more)
docs/: README.md
info/: README.md
mcp/: README.md
mcp/chromadb/: README.md  manifest.yaml  pyproject.toml
mcp/chromadb/chromadb_mcp/: server.py
mcp/codegraph/: README.md  pyproject.toml
mcp/codegraph/codegraph/: __init__.py  server.py
mcp/cognition_codex/: README.md  manifest.yaml  pyproject.toml
mcp/cognition_codex/cognition/: __init__.py  server.py
mcp/cognition_codex/cognition/state/: cognition_codex.json
mcp/evolution/: README.md  manifest.yaml  pyproject.toml
mcp/evolution/evolution/: __init__.py  server.py
mcp/trace_export/: README.md  manifest.yaml  pyproject.toml
mcp/trace_export/trace_export/: __init__.py  server.py
mcp/trace_export/trace_export/exports/: trace_exports.jsonl
mcp/treesitter/: README.md  manifest.yaml  pyproject.toml
mcp/treesitter/treesitter/: __init__.py  server.py
rules/: core.md
runtime/codex_knowledge/: pyproject.toml
runtime/codex_knowledge/src/codex_knowledge/: __init__.py  graph_layer.py  registry.py  server.py  settings.py  vector_memory.py  workflows.py
scripts/: bootstrap-four-elements.sh  bootstrap-project.sh  doctor-codex.sh  doctor.sh  install-codex-cli.sh  install-codex-runtime.sh  install-deps.sh  install-global.sh  phase2-doctor.sh  phase2-down.sh  phase2-health.sh  phase2-status.sh  phase2-up.sh  project-regression.sh
workflows/: development.md  intake-pm.md  memory-capture.md  qc.md  research.md  self-heal-runtime.md  ship-gate.md
(+137 files in other folders)
