[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph-mcp"
version = "0.1.0"
description = "Facade-first code graph MCP service over local code structure"
requires-python = ">=3.11"
dependencies = ["mcp==1.27.0"]

[tool.setuptools]
packages = ["codegraph"]
