[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolution-mcp"
version = "0.1.0"
description = "Phase 2 harness evolution MCP service"
requires-python = ">=3.11"
dependencies = ["mcp==1.27.0"]

[tool.setuptools]
packages = ["evolution"]
