[project]
name = "codex-knowledge"
version = "0.1.0"
description = "Local MCP knowledge server for Codex global runtime"
requires-python = ">=3.11"
dependencies = [
  "mcp==1.27.0",
  "langgraph==1.1.8",
  "langmem>=0.0.30,<0.1",
  "chromadb==1.5.8",
  "fastembed==0.8.0",
  "kuzu==0.11.3",
]

[project.scripts]
codex-knowledge = "codex_knowledge.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
